--- a/kafka-basics/build.gradle
+++ b/kafka-basics/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.6'
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
-    testImplementation 'org.slf4j:slf4j-simple:2.0.6'
+    implementation 'org.slf4j:slf4j-simple:2.0.6'
 
 }
 
